--- a/index.html
+++ b/index.html
@@ -1,25 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <a href="https://skcet.ac.in/" target="_blank">
-    <center><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/aa/SKI-Coimbatore-Logo.webp/225px-SKI-Coimbatore-Logo.webp.png" alt="skcet LOGO" height="100px" width="100px"></center></a>
-    <h1>ECE C Students</h1>
-    <h2>MERN Training going on...</h2>
-    <p>Rushtha Firadous A</p>
-    <p>Full Form of MERN</p>
-    <ol>
-        <li>M - MongoDB</li>
-        <li>E - ExpressJS</li>
-        <li>R - React</li>
-        <li>N - NodeJS</li>
-    </ol>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis molestias magni a explicabo laboriosam incidunt quam ipsa consequuntur rem tempore temporibus neque sapiente soluta accusantium accusamus voluptatum, dolorum vitae dicta? Iure ipsa quo blanditiis sed alias ipsum harum, itaque rem dicta culpa voluptates excepturi deserunt fuga quibusdam porro soluta aspernatur maiores neque, ab sunt cum modi dolores unde. Deserunt eveniet reiciendis iure nihil consectetur amet error nostrum, maxime veritatis ex recusandae. Aut, quae architecto. Assumenda cupiditate, officiis animi exercitationem incidunt eligendi enim voluptates hic modi veniam dolorem quos architecto sit inventore cum? Dicta, tenetur, totam incidunt quidem cumque culpa necessitatibus voluptates deserunt facilis nisi inventore, beatae nostrum ullam veritatis quam aut similique eos odit doloremque praesentium dolorum. Laboriosam perferendis quis, earum vel ad dolorum provident saepe natus. Velit cum voluptas nostrum aspernatur omnis, nam quibusdam iste nulla corporis praesentium animi explicabo odit excepturi libero commodi quam minus error necessitatibus maiores dicta, eaque dolor. Commodi iste, alias id, incidunt quisquam, nihil sequi earum soluta et quis aut. Impedit repellat vero adipisci eius voluptatibus nihil nobis veritatis minima laborum mollitia. Quasi eos labore libero, minima neque cumque impedit consequuntur. Itaque consequatur magnam iste impedit. Deserunt veniam sint qui doloremque dicta recusandae? Ipsum?</p>
-    <p>This is done using Lorem</p>
-    <h6>Hello</h6>
-</body>
+<html>
+    <head>
+        <title>HTML PROJECT 1</title>
+        <style>
+            table,th,td
+            {
+                text-align: center;
+                border: 2px solid black;
+                border-collapse: collapse;
+            }
+        </style>
+    </head>
+    <body style="text-align: center;">
+        <h2>RUSHTHA FIRADOUS A</h2>
+        <h3>DAY 2 : DAILY TASK</h3>
+        <br>
+        <p>Click down to view my RESUME</p>
+        <a href="file:///C:/Users/rusht/Downloads/RUSHTHA%20FIRADOUS_RESUME.pdf" target="_blank">
+            <img src="https://media.licdn.com/dms/image/D560BAQGhAPSw8LzZsQ/company-logo_200_200/0/1681526579680/myresume_lk_logo?e=1729728000&v=beta&t=VxLjR01gqooTYnLps74UC_bjqaonZYyyJGqtXYTxeTs" height="1%" width="15%">
+        </a>
+        <br>
+        <br>
+        <br>
+        ,<center><table>
+            <tr style="background-color: lightgray;">
+                <th style="width: 15%;"><b><form><label>COURSE</label></form></b></th>
+                <th style="width: 50%;" ><b><form><label>SCHOOL/COLLEGE</label></form></b></th>
+                <th style="height: 50px;"><b><form><label>YEAR OF PASSING</label></form></b></th>
+                <th><b><form><label>PERCENTAGE/CGPA</label></form></b></th>
+            </tr>
+            <tr >
+                <td><form><label>UG(BE ECE)</label></form></td>
+                <td><form><label>SRI KRISHNA COLLEGE OF ENGINERRING AND TECHNOLOGY</label></form></td>
+                <td><form><label>2026</label></form></td>
+                <td><form><label>7.9</label></form></td>
+            </tr>
+            <tr>
+                <td><form><label>HSC</label></form></td>
+                <td><form><label>PKD MATRICULATION HIGHER SECONDARY SCHOOL</label></form></td>
+                <td><form><label>2022</label></form></td>
+                <td><form><label>93.3%</label></form></td>
+            </tr>
+            <tr>
+                <td><form><label>SSLC</label></form></td>
+                <td><form><label>PKD MATRICULATION HIGHER SECONDARY SCHOOL</label></form></td>
+                <td><form><label>2020</label></form></td>
+                <td><form><label>97.3%</label></form></td>
+            </tr>
+        </table>
+        </center>
+    </body>
 </html>
