--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <br>
         <br>
         <br>
-        ,<center><table>
+        <center><table>
             <tr style="background-color: lightgray;">
                 <th style="width: 15%;"><b><form><label>COURSE</label></form></b></th>
                 <th style="width: 50%;" ><b><form><label>SCHOOL/COLLEGE</label></form></b></th>
