--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h3>DAY 2 : DAILY TASK</h3>
         <br>
         <p>Click down to view my RESUME</p>
-        <a href="file:///C:/Users/rusht/Downloads/RUSHTHA%20FIRADOUS_RESUME.pdf" target="_blank">
+        <a href="Portfolio\RUSHTHA FIRADOUS_RESUME.pdf" target="_blank">
             <img src="https://media.licdn.com/dms/image/D560BAQGhAPSw8LzZsQ/company-logo_200_200/0/1681526579680/myresume_lk_logo?e=1729728000&v=beta&t=VxLjR01gqooTYnLps74UC_bjqaonZYyyJGqtXYTxeTs" height="1%" width="15%">
         </a>
         <br>
