--- a/portfolio.html
+++ b/portfolio.html
@@ -171,7 +171,7 @@
             <h1 class="h1" style="color:rgb(18, 159, 112)" name="#home">HOME</h1>
         <div class="pic">
             <div>
-            <img src="C:\Users\rusht\OneDrive\Pictures\me\resumepic.jpg" class="img"></div>
+            <img src="resumepic.jpg" class="img"></div>
             <br>
             <div>
             <ul class="pics"><li><h1 style="color: white; font-family: Georgia, 'Times New Roman', Times, serif;">HELLO !!!</h1></li>
